traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if ((getX(),getY())==(getMondeLargeur(),getMondeHauteur())){
    ^